kubernetes/home-assistant/home-assistant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      nodeSelector:
        gluster-volume-mount/ready: "true"
        feature.node.kubernetes.io/usb-02_1cf1_0030.present: "true" # zigbee
      priorityClassName: home-automation
      terminationGracePeriodSeconds: 120 # try to prevent zigbee.db corruption
      securityContext:
        runAsUser: 42770
        runAsGroup: 42770
        supplementalGroups:
        - 27 # "video" group for generic-device-plugin
      volumes:
      - name: state
        hostPath:
          path: /data/home-assistant
      - name: custom-components
        emptyDir:
      - name: configs
        emptyDir:
      - name: lldap-ha-auth
        emptyDir:
      - name: secrets
        secret:
          secretName: home-assistant
      - name: webos-dev-mode-curl
        secret:
          secretName: webos-dev-mode-curl
      containers:
      - name: home-assistant
        # https://github.com/home-assistant/core/pkgs/container/home-assistant/versions
        image: homeassistant/home-assistant:2026.7.0
        resources:
          requests:
            cpu: "100m"
            memory: "400Mi"
            squat.ai/zigbee: 1
          limits:
            cpu: "1000m"
            memory: "600Mi"
            squat.ai/zigbee: 1
        volumeMounts:
        - name: state
          mountPath: /config
        - name: custom-components
          mountPath: /config/custom_components
        - name: configs
          subPath: configuration.yaml
          mountPath: /config/configuration.yaml
          readOnly: true
        - name: configs
          subPath: ui-lovelace.yaml
          mountPath: /config/ui-lovelace.yaml
          readOnly: true
        - name: lldap-ha-auth
          subPath: lldap-ha-auth.sh
          mountPath: /lldap-ha-auth.sh
          readOnly: true
        - name: secrets
          subPath: secrets.yaml
          mountPath: /config/secrets.yaml
          readOnly: true
        - name: webos-dev-mode-curl
          subPath: webos-dev-mode-curl
          mountPath: /webos-dev-mode-curl
        ports:
        - name: http
          containerPort: 8123
        startupProbe:
          httpGet:
            path: /manifest.json
            port: 8123
          timeoutSeconds: 10
          failureThreshold: 60
        readinessProbe:
          httpGet:
            path: /manifest.json
            port: 8123
          timeoutSeconds: 10
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /manifest.json
            port: 8123
          timeoutSeconds: 10
          failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hide-prometheus-endpoint
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  replacePath:
    path: /api/prometheus-disabled
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-hide-prometheus
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`home.cambridge.me`) && PathPrefix(`/api/prometheus`)
    kind: Rule
    priority: 1000
    middlewares:
    - name: hide-prometheus-endpoint
    services:
    - name: home-assistant
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "home.cambridge.me"
    secretName: home-cambridge-me-tls
  rules:
  - host: home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              name: http
